--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
   "homepage": "https://github.com/tanghongxin/extract-common-css-webpack-plugin#readme",
   "devDependencies": {
     "@types/lodash-es": "^4.17.4",
-    "@types/node": "^16.3.2",
+    "@types/node": "^16.3.3",
     "@types/webpack": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
+    "eslint": "^7.30.0",
     "lodash-es": "^4.17.21",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5",
-    "webpack": "^5.45.0",
+    "webpack": "^5.45.1",
     "webpack-cli": "^4.7.2",
     "webpack-node-externals": "^3.0.0"
   }
